--- a/package.json
+++ b/package.json
@@ -9,13 +9,24 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "chart.js": "^2.8.0",
+    "gh-polyglot": "^2.3.2",
+    "next": "^9.0.5",
+    "prop-types": "^15.7.2",
+    "react-flip-move": "^3.0.3",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && lint-staged"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
