--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
     "chart.js": "^2.8.0",
     "gh-polyglot": "^2.3.2",
     "next": "^9.0.5",
     "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-flip-move": "^3.0.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
