--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "getmegit-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://getmegit-website.now.sh/",
   "dependencies": {
     "@primer/octicons-react": "^9.1.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -9,7 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "chart.js": "^2.8.0",
     "gh-polyglot": "^2.3.2",
-    "next": "^9.0.5",
+    "now": "^17.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
