--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "serve": "^11.3.0",
     "styled-components": "^4.4.1"
   },
   "scripts": {
